Fixed alignment of lists

--- a/styles.css
+++ b/styles.css
@@ -22,8 +22,8 @@ button:hover {
 }
 
 ol, ul {
-    text-align: left;
-    padding-left: 20px;
+    text-align: center;
+    padding-left: 0px;
     font-size: 1.5em;
 }
 
